chore: modify table and fix mini bug
