# docs/products/swagger.json
@@ -62,35 +62,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "remove product from favorite",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "favorite"
-                ],
-                "parameters": [
-                    {
-                        "type": "number",
-                        "description": "inventory id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.OK"
-                        }
-                    }
-                }
             }
         },
         "/inventories": {
@@ -694,6 +665,9 @@
         "dtos.Bookmark": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string"
+                },
                 "color": {
                     "description": "Color of product",
                     "allOf": [
@@ -719,6 +693,9 @@
                 },
                 "price": {
                     "type": "string"
+                },
+                "product_id": {
+                    "type": "integer"
                 },
                 "rating": {
                     "type": "number"
