# internal/apis/container/article/controller.go
@@ -22,16 +22,10 @@ func NewController(service article.IArticle) IController {
 
 // IController interface for article controller
 type IController interface {
-	UploadArticle(c echo.Context) error
-	UpdateCollectionsImage(c echo.Context) error
-	GetArticleData(c echo.Context) error
-
 	UploadNews(c echo.Context) error
 	UpdateNewsImage(c echo.Context) error
 	GetNews(c echo.Context) error
 
-	UploadMessage(c echo.Context) error
-	GetMessage(c echo.Context) error
 	GetComment(c echo.Context) error
 	UploadComment(c echo.Context) error
 }
@@ -46,7 +40,7 @@ type Controller struct {
 // @Tags news
 // @Accept json
 // @Produce json
-// @Param position query string true "position of news"
+// @Param category query string true "category of news"
 // @Param limit query number true "limit of cards carousel"
 // @Success 200 {object} dtos.News
 // @Router /news [GET]
@@ -115,7 +109,7 @@ func (p *Controller) UpdateNewsImage(c echo.Context) error {
 // @Accept json
 // @Produce json
 // @Param collection body dtos.NewsDTO true "news Request"
-// @Success 201 {object} dtos.CollectionUpload
+// @Success 201 {object} dtos.OK
 // @Router /news [POST]
 func (p *Controller) UploadNews(c echo.Context) error {
 	var news dtos.NewsDTO
@@ -129,175 +123,15 @@ func (p *Controller) UploadNews(c echo.Context) error {
 			Msg: _valid.Error(),
 		})
 	}
-	id, err := p.Services.UploadNews(c.Request().Context(), news)
+	_, err := p.Services.UploadNews(c.Request().Context(), news)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	return c.JSON(http.StatusCreated, dtos.CollectionUpload{
-		Msg: "collection uploaded successfully",
-		ID:  id,
-	})
-}
-
-// GetMessage .
-// @Description get list of headline banner
-// @Tags collections
-// @Accept json
-// @Produce json
-// @Param position query string true "position of collections"
-// @Param limit query int true "limit headline of collections"
-// @Success 200 {object} dtos.Message
-// @Router /collections/message [GET]
-func (p *Controller) GetMessage(c echo.Context) error {
-	var (
-		pos    = c.QueryParam("position")
-		sLimit = c.QueryParam("limit")
-	)
-	limit, err := strconv.Atoi(sLimit)
-	if pos == "" || err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: "position and limit are required. limit must be a number",
-		})
-	}
-	headlines, err := p.Services.GetMessage(c.Request().Context(), pos, limit)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	return c.JSON(http.StatusOK, headlines)
-}
-
-// UploadMessage .
-// @Description create headline banner into collections
-// @Tags collections
-// @Accept json
-// @Produce json
-// @Param banner body dtos.Message true "headline banner data request"
-// @Success 201 {object} dtos.OK
-// @Router /collections/message [POST]
-func (p *Controller) UploadMessage(c echo.Context) error {
-	var banner dtos.Message
-	if err := c.Bind(&banner); err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	if err := valid.Validate(&banner); err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	if err := p.Services.UploadMessage(c.Request().Context(), banner); err != nil {
 		return c.JSON(http.StatusInternalServerError, dtos.Error{
 			Msg: err.Error(),
 		})
 	}
 	return c.JSON(http.StatusCreated, dtos.OK{
-		Msg: "your headline has been created successfully",
-	})
-}
-
-// UploadArticle .
-// @Description create collections
-// @Tags collections
-// @Accept json
-// @Produce json
-// @Param collection body dtos.UploadArticle true "collections Request"
-// @Success 201 {object} dtos.Message
-// @Router /collections [POST]
-func (p *Controller) UploadArticle(c echo.Context) error {
-	var cardBanner dtos.UploadArticle
-	if err := c.Bind(&cardBanner); err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	if _valid := valid.Validate(&cardBanner); _valid != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: _valid.Error(),
-		})
-	}
-	id, err := p.Services.UploadArticle(c.Request().Context(), cardBanner)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	return c.JSON(http.StatusCreated, dtos.CollectionUpload{
 		Msg: "collection uploaded successfully",
-		ID:  id,
 	})
-}
-
-// UpdateCollectionsImage .
-// @Description update collections image
-// @Tags collections
-// @Accept json
-// @Produce json
-// @Param img formData file true "image of collections"
-// @Param id formData string true "collections identifier"
-// @Success 200 {object} dtos.OK
-// @Router /collections/img [PUT]
-func (p *Controller) UpdateCollectionsImage(c echo.Context) error {
-	file, err := c.FormFile("img")
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	id := c.FormValue("id")
-	if id == "" {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: "missing 'id' field",
-		})
-	}
-
-	if err := p.Services.UploadCollectionsImage(c.Request().Context(), id, file); err != nil {
-		return c.JSON(http.StatusInternalServerError, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-
-	return c.JSON(http.StatusOK, dtos.OK{
-		Msg: "upload image of collection successfully",
-	})
-}
-
-// GetArticleData .
-// @Description get collections
-// @Tags collections
-// @Accept json
-// @Produce json
-// @Param position query string true "position of collections"
-// @Param limit query number true "limit of cards carousel"
-// @Success 200 {object} dtos.Article
-// @Router /collections [GET]
-func (p *Controller) GetArticleData(c echo.Context) error {
-	position := c.QueryParam("position")
-	limit := c.QueryParam("limit")
-	if position == "" || limit == "" {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: "missing 'position' or 'limit' field",
-		})
-	}
-
-	_limit, err := strconv.Atoi(limit)
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-
-	carousel, err := p.Services.GetCarousels(c.Request().Context(), position, _limit)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, dtos.Error{
-			Msg: err.Error(),
-		})
-	}
-	return c.JSON(http.StatusOK, *carousel)
 }
 
 // GetComment .
@@ -327,7 +161,7 @@ func (p *Controller) GetComment(c echo.Context) error {
 
 // UploadComment .
 // @Description create comment into products
-// @Tags collections
+// @Tags comment
 // @Accept json
 // @Produce json
 // @Param banner body dtos.Comment true "comment data request"
